# edwh-whitelabel-plugin

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
example/: combined.txt  platform.in  whitelabel.in
src/edwh_demo_plugin/: demo_plugin.py
src/edwh_whitelabel_plugin/: __about__.py  whitelabel_plugin.py
