[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edwh-whitelabel-plugin"
dynamic = ["version"]
description = 'Whitelabel-specific tasks'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "Remco Boerma", email = "remco.b@educationwarehouse.nl" },
    { name = "Robin van der Noord", email = "robin.vdn@educationwarehouse.nl" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    'edwh',
    'edwh-pipcompile-plugin'
]

[project.optional-dependencies]
dev = [
    "hatch",
    # "python-semantic-release",
    "black",
]

[project.urls]
Documentation = "https://github.com/educationwarehouse/edwh-whitelabel-tasks-plugin#readme"
Issues = "https://github.com/educationwarehouse/edwh-whitelabel-tasks-plugin/issues"
Source = "https://github.com/educationwarehouse/edwh-whitelabel-tasks-plugin"

# https://packaging.python.org/en/latest/guides/creating-and-discovering-plugins/#using-package-metadata
[project.entry-points."edwh.tasks"]
wl = "edwh_whitelabel_plugin.whitelabel_plugin"

[tool.edwh.pipcompile.example]
input = ["whitelabel.in", "platform.in"]
output = "combined.txt"

[tool.hatch.version]
path = "src/edwh_whitelabel_plugin/__about__.py"

[tool.semantic_release]
branch = "master"
version_variable = "src/edwh_whitelabel_plugin/__about__.py:__version__"
change_log = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
build_command = "hatch build"

parser_angular_minor_types = "feat,minor"
parser_angular_patch_types = "fix,perf,refactor,build,chore,patch"


[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/edwh_whitelabel_plugin tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120

select = [
    "F", # pyflake error
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "Q", # quotes
    "A", # builtins
    # "C4", # comprehensions - NO: doesn't allow dict()
    # "RET", # return - NO: annoying
    "SIM", # simplify
    "ARG", # unused arguments
    # "COM", # comma's - NO: annoying
    # "PTH", # use pathlib - NO: annoying
    "RUF", # ruff rules
]
unfixable = [
    # Don't touch unused imports
    "F401",
]
extend-exclude = ["*.bak/", "venv*/"]

ignore = [
    "RUF013" # implicit Optional
]

[tool.isort]
profile = "black"
extend_skip_glob = ["*.bak/*"]

[tool.ruff.isort]
known-first-party = ["edwh_whitelabel_plugin"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["edwh_whitelabel_plugin", "tests"]
branch = true
parallel = true
omit = [
    "src/edwh_whitelabel_plugin/__about__.py",
]

[tool.coverage.paths]
edwh_whitelabel_plugin = ["src/edwh_whitelabel_plugin", "*/edwh-whitelabel-plugin/src/edwh_whitelabel_plugin"]
tests = ["tests", "*/edwh-whitelabel-plugin/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
